# enlace-microservice-reference

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/adapters/: pyproject.toml
examples/adapters/src/enlace_examples/: __init__.py  file_source.py  http_source.py  logging_recipient.py  webhook_recipient.py
fixtures/: sample.json
scripts/: export_schemas.py
services/action-service/: pyproject.toml
services/action-service/src/action_service/: main.py
services/curation-service/: pyproject.toml
services/curation-service/src/curation_service/: main.py
services/retriever-service/: pyproject.toml
services/retriever-service/src/retriever_service/: main.py
tests/: test_roles.py
tests/contract/: test_contracts.py
tests/contract/fixtures/: retrieved_message.json
tests/integration/: test_compose.py
