[project]
name = "enlace-examples"
version = "0.1.0"
description = "Example source and recipient adapters for Enlace microservices"
requires-python = ">=3.12"
dependencies = [
    "enlace-action",
    "enlace-core",
    "enlace-retriever",
    "httpx>=0.27",
    "pydantic>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enlace_examples"]

[tool.uv.sources]
enlace-core = { workspace = true }
enlace-retriever = { workspace = true }
enlace-action = { workspace = true }
