[project]
name = "action-service"
version = "0.1.0"
description = "Reference action microservice"
requires-python = ">=3.12"
dependencies = [
    "enlace-action",
    "enlace-contracts",
    "enlace-core",
    "enlace-examples",
    "enlace-transport",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/action_service"]

[tool.uv.sources]
enlace-core = { workspace = true }
enlace-contracts = { workspace = true }
enlace-action = { workspace = true }
enlace-transport = { workspace = true }
enlace-examples = { workspace = true }

[project.scripts]
action-service = "action_service.main:run"
