[project]
name = "retriever-service"
version = "0.1.0"
description = "Reference retriever microservice"
requires-python = ">=3.12"
dependencies = [
    "enlace-contracts",
    "enlace-core",
    "enlace-examples",
    "enlace-retriever",
    "enlace-transport",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retriever_service"]

[tool.uv.sources]
enlace-core = { workspace = true }
enlace-contracts = { workspace = true }
enlace-retriever = { workspace = true }
enlace-transport = { workspace = true }
enlace-examples = { workspace = true }

[project.scripts]
retriever-service = "retriever_service.main:run"
